--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "tiktok-bot",
   "version": "1.0.0",
   "description": "bot qui fait des video tiktok tout seul ya zehbi",
-  "main": "npm run edit",
+  "main": "npm run test",
   "scripts": {
-    "index": "node .index.js",
+    "index": "node index.js",
     "download": "node ./src/download.js",
-    "edit": "node ./src/edit.js"
+    "edit": "node ./src/edit.js",
+    "test": "node test.js"
   },
   "author": "Adryan",
   "license": "ISC",
