:white_check_mark: début de l'ajout de l'audio fix stack (fps_mode vfr) spaghetti code clean incoming

--- a/config.json
+++ b/config.json
@@ -8,6 +8,8 @@
     
     "temp": 
     {
+        "top" : "./temp/top.mp4",
+        "bottom" : "./temp/bottom.mp4",
         "crop_up" : "./temp/crop_up.mp4",
         "crop_down" : "./temp/crop_down.mp4",
         "stack" : "./temp/stack.mp4"
