--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "tiktok-bot",
   "version": "1.0.0",
   "description": "bot qui fait des video tiktok tout seul ya zehbi",
-  "main": "npm run test",
+  "main": "npm run index",
   "scripts": {
     "index": "node index.js",
     "download": "node ./src/download.js",
     "edit": "node ./src/edit.js",
-    "test": "node test.js"
+    "test": "node test.js",
+    "generate": "node generate.js"
   },
   "author": "Adryan",
   "license": "ISC",
@@ -18,6 +19,7 @@
     "fluent-ffmpeg": "^2.1.2",
     "fs": "^0.0.1-security",
     "yaml": "^2.1.3",
+    "youtube-mp3-converter": "^1.0.3",
     "ytdl-core": "^4.11.2"
   }
 }
