Implementation de l'audio

--- a/config.json
+++ b/config.json
@@ -12,7 +12,8 @@
         "bottom" : "./temp/bottom.mp4",
         "crop_up" : "./temp/crop_up.mp4",
         "crop_down" : "./temp/crop_down.mp4",
-        "stack" : "./temp/stack.mp4"
+        "stack" : "./temp/stack.mp4",
+        "audio" : "./temp/audio.mp3"
     },
 
     "out": 
